--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+:focus-visible {
+  outline: 3px solid #d4af37;
+  outline-offset: 4px;
+}
+
 body {
   margin: 0;
   min-width: 320px;
